Changelog
=========

1.0.1 (unreleased)
------------------

- Custom “Learned about OiRA” display for France
  https://github.com/syslabcom/scrum/issues/2375


1.0.0 (2024-06-13)
------------------

* Initial release